--- a/server.properties
+++ b/server.properties
@@ -3,5 +3,5 @@ port=8080
 maxIdleTime=120000
 keystoreFile=../localhost_123456.p12
 keystorePassword=123456
-useNativeTLS=true
-useGZIP=false
+useNativeTLS=false
+useGZIP=true
