fix websocket client/server use prefix, suffix, folder for signed output name and randomize between to allow batch calling add logback.xml and simple start scripts

--- a/sign.properties
+++ b/sign.properties
@@ -2,4 +2,6 @@ certificate=pascal@floeschel.de_123456
 pin=123456
 type=PAdES_B_LTA
 file=test.pdf
-signed=signed.pdf
+signedFolder=.
+signedPrefix=signed
+signedSuffix=.pdf
